--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 	branch = v4.8.1
+[submodule "lib/unipilot-v2"]
+	path = lib/unipilot-v2
+	url = https://github.com/Unipilot/unipilot-v2
