--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,7 @@
 [submodule "lib/unipilot-v2"]
 	path = lib/unipilot-v2
 	url = https://github.com/Unipilot/unipilot-v2
+[submodule "lib/uniswap-v3-core"]
+	path = lib/uniswap-v3-core
+	url = https://github.com/solidity-external-tests/uniswap-v3-core
+	branch = main_080
